[package]
authors = ["tracyspacy"]
categories = ["embedded", "hardware-support", "no-std"]
name = "rgbled"
description = "rgbled is a driver for controlling RGB LEDs using PWM, with built-in gamma correction"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tracyspacy/rgbled"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { package = "embedded-hal", version = "1.0" }

[profile.release]
debug = 2
